--- a/client/src/css/_code-output.scss
+++ b/client/src/css/_code-output.scss
@@ -19,7 +19,6 @@
   flex-direction:column;
   margin-right:10px;
   box-shadow: 0px 6px 20px 0px rgba(184, 185, 218, 0.52);
-  z-index: 9998;
   border-radius: 0px 0px 3px 3px;
   flex-grow:1;
   max-width:100%;
