--- a/client/src/css/general.css
+++ b/client/src/css/general.css
@@ -643,7 +643,6 @@ p:last-child {
   border-top: 2px solid #dedede;
   height: 210px;
   display: flex;
-  z-index: 9999;
   justify-content: space-between; }
   #bottom-content-wrapper .bottom-title {
     font-size: 14px;
@@ -675,6 +674,9 @@ p:last-child {
   flex-shrink: 0;
   align-self: flex-end; }
 
+body.code-expanded #bottom-content-wrapper {
+  z-index: 9999; }
+
 #generator-output {
   display: flex;
   flex-grow: 0;
@@ -692,7 +694,6 @@ p:last-child {
   flex-direction: column;
   margin-right: 10px;
   box-shadow: 0px 6px 20px 0px rgba(184, 185, 218, 0.52);
-  z-index: 9998;
   border-radius: 0px 0px 3px 3px;
   flex-grow: 1;
   max-width: 100%; }
@@ -2143,7 +2144,7 @@ textarea {
   border: 1px solid #C9C9CC;
   margin-top: 2px;
   box-shadow: 0px 9px 23px 0px rgba(0, 0, 0, 0.1);
-  z-index: 9998;
+  z-index: 9999;
   font-size: 13px;
   font-weight: 600;
   max-height: 300px; }
