--- a/client/src/css/input/_select-box.scss
+++ b/client/src/css/input/_select-box.scss
@@ -103,7 +103,7 @@
   border: 1px solid #C9C9CC;
   margin-top:2px;
   box-shadow: 0px 9px 23px 0px rgba(0, 0, 0, 0.1);
-  z-index: 9998;
+  z-index: 9999;
   font-size: 13px;
   font-weight: 600;
   max-height:300px;
